<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222c38"
    app:srlDragRate="0.2"
    app:srlEnableLoadMore="false"
    app:srlEnableOverScrollBounce="false"
    app:srlEnableOverScrollDrag="true"
    app:srlEnablePureScrollMode="true"
    app:srlPrimaryColor="#222c38"
    app:srlReboundDuration="300">

    <com.dingyizhe.kungfu.ui.view.SlowScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#222c38"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#222c38"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#222c38"></RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="#1a2127" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="#2d3847" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:background="#222c38"
                android:gravity="center_vertical">

                <com.dingyizhe.kungfu.ui.view.text.KFTextView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:drawableLeft="@drawable/ic_watch"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:text="@string/classification"
                    android:textColor="@color/blue"
                    android:visibility="gone"
                    app:kftv_font="@string/MaterialIcons" />

                <com.dingyizhe.kungfu.ui.view.text.KFTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:text="@string/SourceHanSansNormal"
                    app:kftv_font="@string/SourceHanSansNormal" />

                <com.dingyizhe.kungfu.ui.view.text.KFTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    android:text="&#xE87C;"
                    android:textColor="@color/blue"
                    app:kftv_font="@string/MaterialIcons" />


            </RelativeLayout>

            <!--   <View
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/dp_0.5"
                   android:background="@color/gray_line" />-->

            <com.dingyizhe.kungfu.ui.view.text.KFTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/SourceHanSansNormal"
                app:kftv_font="@string/SourceHanSansNormal" />

            <!--<View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0.5"
                android:background="@color/gray_line" />-->

            <com.dingyizhe.kungfu.ui.view.text.KFTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/SourceHanSansRegular"
                app:kftv_font="@string/SourceHanSansRegular" />

            <!-- <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_0.5"
                 android:background="@color/gray_line" />-->

            <com.dingyizhe.kungfu.ui.view.text.KFTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/SourceHanSansHeavy"
                app:kftv_font="@string/SourceHanSansHeavy" />

            <!-- <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_0.5"
                 android:background="@color/gray_line" />-->

            <com.dingyizhe.kungfu.ui.view.text.KFTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="face"
                android:textColor="@color/blue"
                app:kftv_font="@string/MaterialIcons" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20">

                <com.dingyizhe.kungfu.ui.view.text.KFTextView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:gravity="center_vertical"
                    android:text="settings"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dp_20"
                    app:kftv_font="@string/MaterialIcons" />

                <com.dingyizhe.kungfu.ui.view.text.KFTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="设置"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dp_15"
                    app:kftv_font="@string/SourceHanSansNormal" />

                <com.dingyizhe.kungfu.ui.view.text.KFTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dp_20"
                    app:kftv_font="@string/MaterialIcons" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20">

                <com.dingyizhe.kungfu.ui.view.text.KFTextView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:gravity="center_vertical"
                    android:text="settings"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dp_20"
                    app:kftv_font="@string/MaterialIcons" />

                <com.dingyizhe.kungfu.ui.view.text.KFTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="设置"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dp_15"
                    app:kftv_font="@string/SourceHanSansNormal" />

                <com.dingyizhe.kungfu.ui.view.text.KFTextView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:gravity="center|right"
                    android:text=""
                    android:textColor="@color/blue"
                    android:textSize="@dimen/dp_20"
                    app:kftv_font="@string/Octicons" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="#1a2127" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="#2d3847" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#222c38"></RelativeLayout>


        </LinearLayout>

    </com.dingyizhe.kungfu.ui.view.SlowScrollView>

</com.scwang.smartrefresh.layout.SmartRefreshLayout>
